Fix extra padding out of nowhere in .tracklist ul

--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,10 @@ th {
 	border-radius: 60px;
 }
 
+.track-list ul {
+	padding: 0;
+}
+
 .track-list ul li {
 	cursor: pointer;
 	list-style-type: none;
